Setup matrices first

--- a/.gitignore
+++ b/.gitignore
@@ -64,4 +64,6 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 
+# Added by me
 .idea/workspace.xml
+# UserInterfaceState.xcuserstate
